fix structure and styles of projects

--- a/src/pages/projects.html
+++ b/src/pages/projects.html
@@ -29,7 +29,7 @@
                     </h1>
                 </div>
 
-                <div id="projects-container" class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6">
+                <div id="projects-container" class="grid grid-cols-1 md:grid-cols-2 gap-6">
 
                     <div
                         class="border border-white/10 bg-[#050505] p-8 flex flex-col justify-between hover:border-red-600/50 transition-all group relative">
@@ -37,6 +37,7 @@
                             class="absolute top-4 right-4 text-[9px] font-black uppercase tracking-widest text-red-600 bg-red-600/10 px-2 py-1">
                             <span data-i18n="projects.status.active">Актыўны</span>
                         </div>
+
                         <div>
                             <div class="text-4xl mb-6">⚖️</div>
                             <span data-i18n="projects.legal-shield.category"
@@ -52,6 +53,7 @@
                                 Поўнае юрыдычнае суправаджэнне: ад атрымання ВНЖ да абароны ад міжнароднага вышуку і
                                 экстрадыцыі.
                             </p>
+
                             <ul class="space-y-2 mb-8">
                                 <li class="text-[10px] uppercase tracking-wider text-gray-500 flex items-center gap-2">
                                     <span class="w-1 h-1 bg-red-600"></span>
@@ -73,7 +75,8 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="https://t.me/bulwarkf_bot" target="_blank" data-i18n="projects.apply_button"
+
+                        <a href="https://t.me/bulwark_fund_bot" target="_blank" data-i18n="projects.apply_button"
                             class="inline-block w-full py-4 bg-white text-black text-center font-black uppercase text-[10px] tracking-[0.2em] hover:bg-red-600 hover:text-white transition-all">
                             Падаць заяўку
                         </a>
@@ -85,6 +88,7 @@
                             class="absolute top-4 right-4 text-[9px] font-black uppercase tracking-widest text-red-600 bg-red-600/10 px-2 py-1">
                             <span data-i18n="projects.status.active">Актыўны</span>
                         </div>
+
                         <div>
                             <div class="text-4xl mb-6">🧠</div>
                             <span data-i18n="projects.mental-support.category"
@@ -100,6 +104,7 @@
                                 Кваліфікаваная дапамога ў пераадоленні наступстваў вайны, праца з ПТСР і адаптацыя да
                                 цывільнага жыцця.
                             </p>
+
                             <ul class="space-y-2 mb-8">
                                 <li class="text-[10px] uppercase tracking-wider text-gray-500 flex items-center gap-2">
                                     <span class="w-1 h-1 bg-red-600"></span>
@@ -120,7 +125,8 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="https://t.me/bulwarkf_bot" target="_blank" data-i18n="projects.apply_button"
+
+                        <a href="https://t.me/bulwark_fund_bot" target="_blank" data-i18n="projects.apply_button"
                             class="inline-block w-full py-4 bg-white text-black text-center font-black uppercase text-[10px] tracking-[0.2em] hover:bg-red-600 hover:text-white transition-all">
                             Падаць заяўку
                         </a>
@@ -132,6 +138,7 @@
                             class="absolute top-4 right-4 text-[9px] font-black uppercase tracking-widest text-red-600 bg-red-600/10 px-2 py-1">
                             <span data-i18n="projects.status.active">Актыўны</span>
                         </div>
+
                         <div>
                             <div class="text-4xl mb-6">🛡️</div>
                             <span data-i18n="projects.addiction-recovery.category"
@@ -147,6 +154,7 @@
                                 Канфідэнцыйная падтрымка для тых, хто сутыкнуўся з алкагольнай, наркатычнай або іншымі
                                 формамі залежнасці.
                             </p>
+
                             <ul class="space-y-2 mb-8">
                                 <li class="text-[10px] uppercase tracking-wider text-gray-500 flex items-center gap-2">
                                     <span class="w-1 h-1 bg-red-600"></span>
@@ -168,7 +176,8 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="https://t.me/bulwarkf_bot" target="_blank" data-i18n="projects.apply_button"
+
+                        <a href="https://t.me/bulwark_fund_bot" target="_blank" data-i18n="projects.apply_button"
                             class="inline-block w-full py-4 bg-white text-black text-center font-black uppercase text-[10px] tracking-[0.2em] hover:bg-red-600 hover:text-white transition-all">
                             Падаць заяўку
                         </a>
@@ -180,6 +189,7 @@
                             class="absolute top-4 right-4 text-[9px] font-black uppercase tracking-widest text-red-600 bg-red-600/10 px-2 py-1">
                             <span data-i18n="projects.status.volunteers">Набор валанцёраў</span>
                         </div>
+
                         <div>
                             <div class="text-4xl mb-6">🤝</div>
                             <span data-i18n="projects.bulwark-hub.category"
@@ -194,6 +204,7 @@
                                 class="text-gray-400 text-sm mb-6 leading-relaxed">
                                 Мы збіраем спецыялістаў, гатовых дапамагаць сваім вопытам: ад юрыстаў да SMM-асістэнтаў.
                             </p>
+
                             <ul class="space-y-2 mb-8">
                                 <li class="text-[10px] uppercase tracking-wider text-gray-500 flex items-center gap-2">
                                     <span class="w-1 h-1 bg-red-600"></span>
@@ -213,11 +224,13 @@
                                 </li>
                             </ul>
                         </div>
-                        <a href="https://t.me/bulwarkf_bot" target="_blank" data-i18n="projects.apply_button"
+
+                        <a href="https://t.me/bulwark_fund_bot" target="_blank" data-i18n="projects.apply_button"
                             class="inline-block w-full py-4 bg-white text-black text-center font-black uppercase text-[10px] tracking-[0.2em] hover:bg-red-600 hover:text-white transition-all">
                             Падаць заяўку
                         </a>
                     </div>
+
                 </div>
             </div>
         </section>
