refactor: move pages to root and implement clean URLs via vercel rewrites

--- a/pages/donate.html
+++ b/pages/donate.html
@@ -52,7 +52,7 @@
                     </h2>
                 </div>
                 <div class="grid grid-cols-1 md:grid-cols-3 gap-6">
-                    <a href="/src/pages/projects.html" target="_blank" rel="noopener noreferrer"
+                    <a href="/projects" target="_blank" rel="noopener noreferrer"
                         class="group p-8 border border-white/10 bg-[#050505] hover:border-red-600/50 transition-all duration-500">
                         <i
                             class="fa-solid fa-scale-balanced text-2xl text-red-600 mb-6 group-hover:scale-110 transition-transform"></i>
@@ -63,7 +63,7 @@
                             class="text-[11px] text-gray-400 font-light leading-relaxed uppercase tracking-wider italic">
                             Легалізацыя ў Украіне і юрыдычны кансалтынг для воінаў.</p>
                     </a>
-                    <a href="/src/pages/projects.html" target="_blank" rel="noopener noreferrer"
+                    <a href="/projects" target="_blank" rel="noopener noreferrer"
                         class="group p-8 border border-white/10 bg-[#050505] hover:border-red-600/50 transition-all duration-500">
                         <i
                             class="fa-solid fa-brain text-2xl text-red-600 mb-6 group-hover:scale-110 transition-transform"></i>
@@ -74,7 +74,7 @@
                             class="text-[11px] text-gray-400 font-light leading-relaxed uppercase tracking-wider italic">
                             Дапамога пры ПТСР і адаптацыя воінаў да цывільнага жыцця.</p>
                     </a>
-                    <a href="/src/pages/projects.html" target="_blank" rel="noopener noreferrer"
+                    <a href="/projects" target="_blank" rel="noopener noreferrer"
                         class="group p-8 border border-white/10 bg-[#050505] hover:border-red-600/50 transition-all duration-500">
                         <i
                             class="fa-solid fa-seedling text-2xl text-red-600 mb-6 group-hover:scale-110 transition-transform"></i>
@@ -104,8 +104,7 @@
                             class="text-[10px] text-gray-500 uppercase mb-8 grow tracking-[0.2em] leading-relaxed max-w-xs">
                             Наўпроставая фінансавая падтрымка нашых абаронцаў праз хуткія плацяжы
                         </p>
-                        <a href="/index.html#donate" target="_blank" rel="noopener noreferrer"
-                            data-i18n="support.btn_donate"
+                        <a href="/#donate" target="_blank" rel="noopener noreferrer" data-i18n="support.btn_donate"
                             class="w-full bg-red-600 py-5 text-[11px] font-black uppercase tracking-[0.4em] hover:bg-white hover:text-black transition-all text-center">
                             Падтрымаць
                         </a>
@@ -121,8 +120,7 @@
                             class="text-[10px] text-gray-500 uppercase mb-8 grow tracking-[0.2em] leading-relaxed max-w-xs">
                             Картай онлайн / Перавод на рахунак / Крыптавалюты
                         </p>
-                        <a href="/src/pages/contacts.html" target="_blank" rel="noopener noreferrer"
-                            data-i18n="support.btn_requisites"
+                        <a href="/contacts" target="_blank" rel="noopener noreferrer" data-i18n="support.btn_requisites"
                             class="w-full border border-white/20 py-5 text-[11px] font-black uppercase tracking-[0.4em] hover:border-red-600 hover:bg-white transition-all text-center">
                             Глядзець рэквізіты
                         </a>
