feat: complete dynamic i18n SEO for index page (meta, OG, Twitter) across all languages

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>Bulwark Fund | Дапамога беларускім добраахвотнікам</title>
-    <meta name="description"
+    <title data-i18n="seo.title">Bulwark Fund | Дапамога беларускім добраахвотнікам</title>
+    <meta name="description" data-i18n="[content]seo.description"
         content="Благадзейны фонд Bulwark. Падтрымка беларускіх воінаў ва Украіне: юрыдычная дапамога, рэабілітацыя, кадравы рэзерв. Далучайся!">
 
     <link rel="alternate" hreflang="be" href="https://bulwark-fund.org/" />
@@ -17,15 +17,16 @@
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bulwark-fund.org/">
-    <meta property="og:title" content="Bulwark Fund | Твая падтрымка — наша моц">
-    <meta property="og:description"
-        content="Дапамога беларускім добраахвотнікам ва Украіне. Юрыдычны шчыт, псіхалогія, будучыня.">
+    <meta property="og:title" data-i18n="[content]seo.og_title" content="Bulwark Fund | BY / EN">
+    <meta property="og:description" data-i18n="[content]seo.og_description"
+        content="Дапамога беларускім добраахвотнікам. Support for Belarusian volunteers in Ukraine.">
     <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
     <meta property="og:site_name" content="Bulwark Fund">
 
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Bulwark Fund">
-    <meta name="twitter:description" content="Дапамога беларускім добраахвотнікам ва Украіне.">
+    <meta name="twitter:title" data-i18n="[content]seo.title" content="Bulwark Fund">
+    <meta name="twitter:description" data-i18n="[content]seo.description"
+        content="Дапамога беларускім добраахвотнікам ва Украіне.">
     <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
