add script for analitics

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
     <load src="./src/partials/footer.html" />
     <load src="./src/partials/cookies.html" />
     <script type="module" src="./src/main.js"></script>
+    <script defer src="/_vercel/insights/script.js"></script>
 </body>
 
 </html>
