feat: implement multi-language SEO system and update metadata for index and projects

--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,18 +5,44 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title data-i18n="seo.projects.title">Нашы праекты | Bulwark Fund</title>
+
+    <meta name="description" data-i18n="[content]seo.projects.description"
+        content="Нашы праекты: поўнае юрыдычнае суправаджэнне, псіхалагічная апора і рэабілітацыя беларускіх добраахвотнікаў ва Украіне.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bulwark-fund.org/pages/projects.html">
+
+    <meta property="og:title" data-i18n="[content]seo.projects.og_title" content="Нашы праекты | Bulwark Fund">
+
+    <meta property="og:description" data-i18n="[content]seo.projects.og_description"
+        content="Юрыдычная дапамога, легалізацыя і псіхалагічная падтрымка беларускіх воінаў. Даведайцеся больш пра напрамкі нашай працы.">
+
+    <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
+
+    <meta property="og:site_name" data-i18n="[content]seo.projects.og_site_name" content="Bulwark Fund">
+
+    <meta name="twitter:card" content="summary_large_image">
+
+    <meta name="twitter:title" data-i18n="[content]seo.projects.twitter_title" content="Нашы праекты | Bulwark Fund">
+
+    <meta name="twitter:description" data-i18n="[content]seo.projects.twitter_description"
+        content="Прававы шчыт і псіхалагічная апора для беларускіх добраахвотнікаў.">
+
+    <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="canonical" href="https://bulwark-fund.org/pages/projects.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title data-i18n="projects.page_title">Праэкты | Bulwark</title>
 </head>
 
-<body>
+<body class="bg-black">
 
     <load src="/src/partials/header.html" />
     <load src="/src/partials/mobile-menu.html" />
 
     <main class="relative min-h-screen w-full bg-black text-white">
-        <section class="py-12 bg-black">
+        <section class="py-12 bg-black pt-12">
             <div class="container-custom">
                 <div class="mb-16 border-l-4 border-red-600 pl-6">
                     <span data-i18n="projects.subtitle"
@@ -37,7 +63,6 @@
                             class="absolute top-4 right-4 text-[9px] font-black uppercase tracking-widest text-red-600 bg-red-600/10 px-2 py-1">
                             <span data-i18n="projects.status.active">Актыўны</span>
                         </div>
-
                         <div>
                             <div class="text-4xl mb-6">⚖️</div>
                             <span data-i18n="projects.legal-shield.category"
@@ -53,7 +78,6 @@
                                 Поўнае юрыдычнае суправаджэнне: ад атрымання ВНЖ да абароны ад міжнароднага вышуку і
                                 экстрадыцыі.
                             </p>
-
                             <ul class="space-y-2 mb-8">
                                 <li class="text-[10px] uppercase tracking-wider text-gray-500 flex items-center gap-2">
                                     <span class="w-1 h-1 bg-red-600"></span>
@@ -75,7 +99,6 @@
                                 </li>
                             </ul>
                         </div>
-
                         <a href="https://t.me/bulwark_fund_bot" target="_blank" data-i18n="projects.apply_button"
                             class="inline-block w-full py-4 bg-white text-black text-center font-black uppercase text-[10px] tracking-[0.2em] hover:bg-red-600 hover:text-white transition-all">
                             Падаць заяўку
@@ -88,7 +111,6 @@
                             class="absolute top-4 right-4 text-[9px] font-black uppercase tracking-widest text-red-600 bg-red-600/10 px-2 py-1">
                             <span data-i18n="projects.status.active">Актыўны</span>
                         </div>
-
                         <div>
                             <div class="text-4xl mb-6">🧠</div>
                             <span data-i18n="projects.mental-support.category"
@@ -104,7 +126,6 @@
                                 Кваліфікаваная дапамога ў пераадоленні наступстваў вайны, праца з ПТСР і адаптацыя да
                                 цывільнага жыцця.
                             </p>
-
                             <ul class="space-y-2 mb-8">
                                 <li class="text-[10px] uppercase tracking-wider text-gray-500 flex items-center gap-2">
                                     <span class="w-1 h-1 bg-red-600"></span>
@@ -112,7 +133,7 @@
                                 </li>
                                 <li class="text-[10px] uppercase tracking-wider text-gray-500 flex items-center gap-2">
                                     <span class="w-1 h-1 bg-red-600"></span>
-                                    <span data-i18n="projects.mental-support.step2">Переадоленне пачуцця віны</span>
+                                    <span data-i18n="projects.mental-support.step2">Пераадоленне пачуцця віны</span>
                                 </li>
                                 <li class="text-[10px] uppercase tracking-wider text-gray-500 flex items-center gap-2">
                                     <span class="w-1 h-1 bg-red-600"></span>
@@ -125,7 +146,6 @@
                                 </li>
                             </ul>
                         </div>
-
                         <a href="https://t.me/bulwark_fund_bot" target="_blank" data-i18n="projects.apply_button"
                             class="inline-block w-full py-4 bg-white text-black text-center font-black uppercase text-[10px] tracking-[0.2em] hover:bg-red-600 hover:text-white transition-all">
                             Падаць заяўку
@@ -138,7 +158,6 @@
                             class="absolute top-4 right-4 text-[9px] font-black uppercase tracking-widest text-red-600 bg-red-600/10 px-2 py-1">
                             <span data-i18n="projects.status.active">Актыўны</span>
                         </div>
-
                         <div>
                             <div class="text-4xl mb-6">🛡️</div>
                             <span data-i18n="projects.addiction-recovery.category"
@@ -154,7 +173,6 @@
                                 Канфідэнцыйная падтрымка для тых, хто сутыкнуўся з алкагольнай, наркатычнай або іншымі
                                 формамі залежнасці.
                             </p>
-
                             <ul class="space-y-2 mb-8">
                                 <li class="text-[10px] uppercase tracking-wider text-gray-500 flex items-center gap-2">
                                     <span class="w-1 h-1 bg-red-600"></span>
@@ -176,7 +194,6 @@
                                 </li>
                             </ul>
                         </div>
-
                         <a href="https://t.me/bulwark_fund_bot" target="_blank" data-i18n="projects.apply_button"
                             class="inline-block w-full py-4 bg-white text-black text-center font-black uppercase text-[10px] tracking-[0.2em] hover:bg-red-600 hover:text-white transition-all">
                             Падаць заяўку
@@ -189,7 +206,6 @@
                             class="absolute top-4 right-4 text-[9px] font-black uppercase tracking-widest text-red-600 bg-red-600/10 px-2 py-1">
                             <span data-i18n="projects.status.volunteers">Набор валанцёраў</span>
                         </div>
-
                         <div>
                             <div class="text-4xl mb-6">🤝</div>
                             <span data-i18n="projects.bulwark-hub.category"
@@ -204,7 +220,6 @@
                                 class="text-gray-400 text-sm mb-6 leading-relaxed">
                                 Мы збіраем спецыялістаў, гатовых дапамагаць сваім вопытам: ад юрыстаў да SMM-асістэнтаў.
                             </p>
-
                             <ul class="space-y-2 mb-8">
                                 <li class="text-[10px] uppercase tracking-wider text-gray-500 flex items-center gap-2">
                                     <span class="w-1 h-1 bg-red-600"></span>
@@ -224,7 +239,6 @@
                                 </li>
                             </ul>
                         </div>
-
                         <a href="https://t.me/bulwark_fund_bot" target="_blank" data-i18n="projects.apply_button"
                             class="inline-block w-full py-4 bg-white text-black text-center font-black uppercase text-[10px] tracking-[0.2em] hover:bg-red-600 hover:text-white transition-all">
                             Падаць заяўку
@@ -260,7 +274,8 @@
                                 <span class="text-red-600 font-bold">02</span>
                                 <p data-i18n="projects.investment.point2"
                                     class="text-sm uppercase tracking-widest text-white font-bold">Ментальнае здароўе
-                                    ветэранаў</p>
+                                    ветэранаў
+                                </p>
                             </div>
                             <div class="flex items-start gap-4">
                                 <span class="text-red-600 font-bold">03</span>
@@ -281,6 +296,7 @@
 
     <load src="/src/partials/footer.html" />
 
+    <script defer src="/_vercel/insights/script.js"></script>
     <script type="module" src="/src/main.js"></script>
 </body>
 
