back the vercel script for analitycs

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
     <load src="/src/partials/modal.html" />
     <load src="./src/partials/footer.html" />
     <load src="./src/partials/cookies.html" />
+    <script defer src="/_vercel/insights/script.js"></script>
     <script type="module" src="./src/main.js"></script>
 </body>
 
