feat: update i18n logic and implement multi-language SEO for history and projects

--- a/pages/history.html
+++ b/pages/history.html
@@ -5,11 +5,33 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title data-i18n="seo.history.title">Гістарычны экскурс | Historical Background | Bulwark Fund</title>
+
+    <meta name="description" data-i18n="[content]seo.history.description"
+        content="Агульная гісторыя і барацьба за незалежнасць. Shared history and the struggle for independence.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bulwark-fund.org/pages/history.html">
+
+    <meta property="og:title" data-i18n="[content]seo.history.og_title"
+        content="Гістарычны экскурс | Historical Background">
+
+    <meta property="og:description" data-i18n="[content]seo.history.og_description"
+        content="Чаму вольная Украіна — гэта залог вольнай Беларусі. Why a free Ukraine is the key to a free Belarus.">
+
+    <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
+    <meta property="og:site_name" data-i18n="[content]seo.history.og_site_name" content="Bulwark Fund">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" data-i18n="[content]seo.history.twitter_title"
+        content="Гістарычны экскурс | Historical Background">
+    <meta name="twitter:description" data-i18n="[content]seo.history.twitter_description"
+        content="Логіка гісторыі: наша выжыванне ўзаемазалежнае. Logic of history: our survival is interdependent.">
+    <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="canonical" href="https://bulwark-fund.org/pages/history.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Гістарычны экскурс | Bulwark</title>
-
-
 </head>
 
 <body">
