--- a/pages/projects.html
+++ b/pages/projects.html
@@ -5,30 +5,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title data-i18n="seo.projects.title">Нашы праекты | Bulwark Fund</title>
+    <title data-i18n="seo.projects.title">Нашы праекты | Our Projects | Bulwark Fund</title>
 
     <meta name="description" data-i18n="[content]seo.projects.description"
-        content="Нашы праекты: поўнае юрыдычнае суправаджэнне, псіхалагічная апора і рэабілітацыя беларускіх добраахвотнікаў ва Украіне.">
+        content="Нашы праекты: падтрымка беларускіх добраахвотнікаў. Our projects: support for Belarusian fighters.">
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bulwark-fund.org/pages/projects.html">
 
-    <meta property="og:title" data-i18n="[content]seo.projects.og_title" content="Нашы праекты | Bulwark Fund">
+    <meta property="og:title" data-i18n="[content]seo.projects.og_title"
+        content="Нашы праекты | Our Projects | Bulwark Fund">
 
     <meta property="og:description" data-i18n="[content]seo.projects.og_description"
-        content="Юрыдычная дапамога, легалізацыя і псіхалагічная падтрымка беларускіх воінаў. Даведайцеся больш пра напрамкі нашай працы.">
+        content="Юрыдычная дапамога і псіхалагічная падтрымка воінаў. Legal aid and psychological support for fighters.">
 
     <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
-
     <meta property="og:site_name" data-i18n="[content]seo.projects.og_site_name" content="Bulwark Fund">
 
     <meta name="twitter:card" content="summary_large_image">
-
-    <meta name="twitter:title" data-i18n="[content]seo.projects.twitter_title" content="Нашы праекты | Bulwark Fund">
-
+    <meta name="twitter:title" data-i18n="[content]seo.projects.twitter_title"
+        content="Нашы праекты | Our Projects | Bulwark Fund">
     <meta name="twitter:description" data-i18n="[content]seo.projects.twitter_description"
-        content="Прававы шчыт і псіхалагічная апора для беларускіх добраахвотнікаў.">
-
+        content="Падтрымка беларускіх добраахвотнікаў ва Украіне. Support for Belarusian fighters in Ukraine.">
     <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
 
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
