feat: implement reports page with multi-language support and unified locales

--- a/pages/reports.html
+++ b/pages/reports.html
@@ -5,11 +5,32 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
+    <title data-i18n="seo.reports.title">Справаздачы | Reports | Bulwark Fund</title>
+
+    <meta name="description" data-i18n="[content]seo.reports.description"
+        content="Фінансавыя і праграмныя справаздачы фонду Bulwark. Празрыстасць нашай працы. | Financial and program reports of the Bulwark Fund. Transparency of our work.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bulwark-fund.org/pages/reports.html">
+
+    <meta property="og:title" data-i18n="[content]seo.reports.og_title" content="Справаздачы | Reports | Bulwark Fund">
+
+    <meta property="og:description" data-i18n="[content]seo.reports.og_description"
+        content="Празрыстасць і справаздачнасць у дапамозе беларускім добраахвотнікам. Transparency and accountability in helping Belarusian volunteers.">
+
+    <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
+    <meta property="og:site_name" data-i18n="[content]seo.reports.og_site_name" content="Bulwark Fund">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" data-i18n="[content]seo.reports.twitter_title"
+        content="Справаздачы | Reports | Bulwark Fund">
+    <meta name="twitter:description" data-i18n="[content]seo.reports.twitter_description"
+        content="Даведайцеся, як мы выкарыстоўваем вашы ахвяраванні для падтрымкі воінаў. Learn how we use your donations to support fighters.">
+    <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="canonical" href="https://bulwark-fund.org/pages/reports.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Справаздачы | Bulwark</title>
-
-
 </head>
 
 <body>
@@ -23,18 +44,20 @@
         <section id="reports" class="py-12 bg-black overflow-hidden">
             <div class="container-custom">
                 <div class="mb-12">
-                    <span data-i18n="nav.reports" class="text-red-600 font-black uppercase tracking-[0.3em] text-xl">
+                    <span data-i18n="reports.page_title"
+                        class="text-red-600 font-black uppercase tracking-[0.3em] text-xl">
                         Справаздачы
                     </span>
                 </div>
 
-
                 <div id="reports-grid-full" class="grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-8">
-                    <div class="text-white/20 uppercase text-[10px] tracking-widest animate-pulse">Загрузка...</div>
+                    <div data-i18n="reports.loading"
+                        class="text-white/20 uppercase text-[10px] tracking-widest animate-pulse">
+                        Загрузка...
+                    </div>
                 </div>
             </div>
         </section>
-
     </main>
 
 
