add head with seo to contacts.html, add keys to lang jsons

--- a/pages/contacts.html
+++ b/pages/contacts.html
@@ -4,9 +4,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title data-i18n="seo.contacts.title">Кантакты | Contacts | Bulwark Fund</title>
+    <meta name="description" data-i18n="[content]seo.contacts.description"
+        content="Звяжыцеся з фондам Bulwark. Кантакты, банкаўскія рэквізіты і крыптавалютныя рахункі для дапамогі беларускім добраахвотнікам. | Contact Bulwark Fund. Contact details, bank requisites, and cryptocurrency accounts to support Belarusian volunteers.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bulwark-fund.org/pages/contacts.html">
+    <meta property="og:title" data-i18n="[content]seo.contacts.og_title"
+        content="Кантакты і рэквізіты | Contacts & Requisites">
+    <meta property="og:description" data-i18n="[content]seo.contacts.og_description"
+        content="Кантакты для сувязі і ўсе спосабы падтрымкі беларускіх добраахвотнікаў. | Contact info and all ways to support Belarusian volunteers.">
+    <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
+    <meta property="og:site_name" data-i18n="[content]seo.contacts.og_site_name" content="Bulwark Fund">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" data-i18n="[content]seo.contacts.twitter_title" content="Кантакты | Bulwark Fund">
+    <meta name="twitter:description" data-i18n="[content]seo.contacts.twitter_description"
+        content="Кантакты і рэквізіты для дапамогі. | Contact and support details.">
+    <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="canonical" href="https://bulwark-fund.org/pages/contacts.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title data-i18n="contacts.page_title">Кантакты | Bulwark</title>
 </head>
 
 <body class="bg-black text-white">
