refactor: modular i18n structure, global translations, and full SEO integration of contacts html

--- a/pages/reports.html
+++ b/pages/reports.html
@@ -63,6 +63,7 @@
 
     <load src="/src/partials/footer.html" />
     <load src="/src/partials/modal.html" />
+    <script defer src="/_vercel/insights/script.js"></script>
     <script type="module" src="/src/main.js"></script>
 
 
