--- a/pages/history.html
+++ b/pages/history.html
@@ -188,7 +188,7 @@
     </main>
 
     <load src="/src/partials/footer.html" />
-
+    <script defer src="/_vercel/insights/script.js"></script>
     <script type="module" src="/src/main.js"></script>
     </body>
 
