feat: add SEO and multi-language support for the Fighter's Oath page

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title data-i18n="seo.index.title">Bulwark Fund | Дапамога беларускім добраахвотнікам</title>
+    <title data-i18n="seo.index.title">Bulwark Fund | Дапамога беларускім добраахвотнікам | Support for Belarusian
+        Fighters</title>
+
     <meta name="description" data-i18n="[content]seo.index.description"
-        content="Благадзейны фонд Bulwark. 
-    Падтрымка беларускіх воінаў ва Украіне: юрыдычная дапамога, рэабілітацыя, кадравы рэзерв. Далучайся! 
-    | Bulwark Charity Foundation. Support for Belarusian fighters in Ukraine: legal aid, rehabilitation, personnel reserve. Join us!">
+        content="Благадзейны фонд Bulwark. Падтрымка беларускіх ваяроў ва Украіне: юрыдычная дапамога, рэабілітацыя, кадравы рэзерв. Далучайся! | Bulwark Charity Foundation. Support for Belarusian fighters in Ukraine: legal aid, rehabilitation, personnel reserve. Join us!">
+
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bulwark-fund.org/">
     <meta property="og:title" data-i18n="[content]seo.index.og_title" content="Bulwark Fund | BY / EN">
@@ -17,11 +18,13 @@
         content="Дапамога беларускім добраахвотнікам. Support for Belarusian fighters in Ukraine.">
     <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
     <meta property="og:site_name" data-i18n="[content]seo.index.og_site_name" content="Bulwark Fund">
+
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" data-i18n="[content]seo.index.twitter_title" content="Bulwark Fund | BY / EN">
     <meta name="twitter:description" data-i18n="[content]seo.index.twitter_description"
         content="Дапамога беларускім добраахвотнікам ва Украіне. Support for Belarusian fighters in Ukraine.">
     <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
     <link rel="canonical" href="https://bulwark-fund.org/">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
