--- a/pages/zarok-vajara.html
+++ b/pages/zarok-vajara.html
@@ -4,9 +4,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <title data-i18n="seo.zarok_vajara.title">Зарок беларускага ваяра | Belarusian Fighter's Oath | Bulwark Fund</title>
+
+    <meta name="description" data-i18n="[content]seo.zarok_vajara.description"
+        content="Зарок беларускага ваяра — урачыстая прысяга добраахвотнікаў за свабоду Беларусі. | The Oath of a Belarusian Fighter — a solemn pledge of volunteers for the freedom of Belarus.">
+
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://bulwark-fund.org/pages/zarok-vajara.html">
+    <meta property="og:title" data-i18n="[content]seo.zarok_vajara.og_title"
+        content="Зарок беларускага ваяра | Belarusian Fighter's Oath">
+    <meta property="og:description" data-i18n="[content]seo.zarok_vajara.og_description"
+        content="Урачыстая прысяга беларускіх добраахвотнікаў. | Solemn oath of Belarusian fighters.">
+    <meta property="og:image" content="https://bulwark-fund.org/og-image.jpg">
+    <meta property="og:site_name" data-i18n="[content]seo.zarok_vajara.og_site_name" content="Bulwark Fund">
+
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" data-i18n="[content]seo.zarok_vajara.twitter_title"
+        content="Зарок беларускага ваяра | Belarusian Fighter's Oath">
+    <meta name="twitter:description" data-i18n="[content]seo.zarok_vajara.twitter_description"
+        content="Урачысты зарок беларускіх воінаў за вольную Беларусь. | Solemn oath of Belarusian fighters for a free Belarus.">
+    <meta name="twitter:image" content="https://bulwark-fund.org/og-image.jpg">
+
     <link rel="icon" type="image/x-icon" href="/favicon.ico">
+    <link rel="canonical" href="https://bulwark-fund.org/pages/zarok-vajara.html">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
-    <title>Зарок ваяра | Bulwark</title>
 </head>
 
 <body class="bg-black">
@@ -25,7 +47,8 @@
             <div class="container-custom h-full flex flex-col items-center justify-center">
 
                 <div class="w-full text-center pt-16 md:pt-24 pb-8 z-20 transparent">
-                    <h1 class="text-4xl md:text-7xl lg:text-8xl font-black uppercase tracking-tighter text-red-600">
+                    <h1 data-i18n="zarok.title"
+                        class="text-4xl md:text-7xl lg:text-8xl font-black uppercase tracking-tighter text-red-600">
                         Зарок ваяра
                     </h1>
                 </div>
@@ -35,7 +58,7 @@
                     <div class="animate-scroll-vertical space-y-20 ">
 
                         <div class="text-center space-y-12 px-4">
-                            <div
+                            <div data-i18n="zarok.content"
                                 class="text-xl md:text-4xl lg:text-5xl font-black uppercase leading-tight tracking-tight space-y-12 md:space-y-16">
                                 <p>Беларусь! Маці мая Радзіма!</p>
                                 <p>Клянуся вызваляць і бараніць Цябе там, дзе знаходжуся зараз і куды прывядзе мяне лёс
@@ -60,7 +83,7 @@
                                     маім.</p>
                                 <p>Жыце Табою, памерці за Цябе, і адрадзіць веліч Тваю.</p>
 
-                                <p class="text-3xl md:text-6xl lg:text-7xl text-red-600 pt-10">
+                                <p data-i18n="zarok.slogan" class="text-3xl md:text-6xl lg:text-7xl text-red-600 pt-10">
                                     Жыве Беларусь! Жыве вечна!
                                 </p>
                             </div>
@@ -69,8 +92,8 @@
                         <div class="text-center space-y-12 px-4 opacity-80" aria-hidden="true">
                             <div
                                 class="text-xl md:text-4xl lg:text-5xl font-black uppercase leading-tight tracking-tight space-y-12 md:space-y-16 italic text-gray-500">
-                                <p>Беларусь! Маці мая Радзіма!</p>
-                                <p>Клянуся вызваляць і бараніць Цябе...</p>
+                                <p data-i18n="zarok.repeat_line1">Беларусь! Маці мая Радзіма!</p>
+                                <p data-i18n="zarok.repeat_line2">Клянуся вызваляць і бараніць Цябе...</p>
                             </div>
                         </div>
 
@@ -81,6 +104,7 @@
     </main>
 
     <load src="/src/partials/footer.html" />
+    <script defer src="/_vercel/insights/script.js"></script>
     <script type="module" src="/src/main.js"></script>
 </body>
 
